           ------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

14 October 2014 - A.Ribon (hadr-cohe-V10-00-14)
-----------------------------------------------------------------
- G4DiffuseElastic : extension down to 0.1 MeV, mainly for neutrons.
- G4hhElastic : changes to combine with low mass diffraction.

31 July 2014 - A.Ribon (hadr-cohe-V10-00-13)
-----------------------------------------------------------------
- G4DiffuseElastic and G4NuclNuclDiffuseElastic : use the average
  nuclear weight for each element to compute the table of angles,
  in order to improve the reproducibility.

30 July 2014 - A.Ribon (hadr-cohe-V10-00-12)
-----------------------------------------------------------------
- G4DiffuseElastic, G4NuclNuclDiffuseElastic, G4hhElastic, and
  G4ChargeExchangeProcess : proper deletion of physics vectors.

27 June 2014 - V.Ivanchenko (hadr-cohe-V10-00-11)
-----------------------------------------------------------------
- G4LEppData, G4LEpp - removed data with Coulomb correction and 
    corresponding code due to reasons: not work properly, provides 
    double counting with EM, code too complex.

18 June 2014 - A.Ribon (hadr-cohe-V10-00-10)
-----------------------------------------------------------------
- G4NuclNuclDiffuseElastic : proper fix of the nuclear radius issue.

06 June 2014 - A.Ribon (hadr-cohe-V10-00-09)
-----------------------------------------------------------------
- G4DiffuseElastic : fixed deletion in destructor.
- G4NuclNuclDiffuseElastic : fixed deletion in destructor; 
  temporary fix of the nuclear radius (which was zero).   

27 May 2014 - V.Ivanchenko (hadr-cohe-V10-00-08)