@@ -14,6 +14,15 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+07 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-17)
+-----------------------------------------------------------------
+07 November 2014 V. Grichine fixed class G4LMsdGenerator 
+
+06 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-16)
+-----------------------------------------------------------------
+06 November 2014 V. Grichine class G4LMsdGenerator was added for 
+    low mass single diffraction dissociation
+
 14 October 2014 - A.Ribon (hadr-cohe-V10-00-14)
 -----------------------------------------------------------------
 - G4DiffuseElastic : extension down to 0.1 MeV, mainly for neutrons.
